# aoc-rust

./: Cargo.toml  README.md  flake.nix
src/: day1.rs  day2.rs  day4.rs  lib.rs  main.rs
