[package]
name = "aoc-rust"
version = "0.1.0"
authors = ["Jacob Newman"]
edition = "2021"

[lib]
bench = false

[dev-dependencies]
criterion = { version = "2.7.2", package = "codspeed-criterion-compat" }

[[bench]]
name = "aoc-timer"
harness = false

[dependencies]
itertools = "0.13.0"
rdxsort = "0.3.0"
